--- a/css/om_mig.css
+++ b/css/om_mig.css
@@ -122,7 +122,7 @@
         }
     
 /*Mindre desktopskärmar :mellan 1200px och 960px*/
-   @media screen and (max-width:1200px)and(min-width:960px){
+   @media screen (max-width:1200px)and(min-width:960px){
 
     .img-box{
         width: 90%;
@@ -161,7 +161,7 @@
   
   
 /*För mobiltelfoner: mindre än 768px*/
-   @media screen and (max-width:600px){
+   @media screen and (max-width:768px)and(min-width:500px){
       
     .img-box{
         width: 90%;
