--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,24 @@ grid-template-areas:
 "icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5"
 }
 
+@media screen and (max-width:1300px) and (min-width:960px){
+#main{   
+width: auto;
+display: grid;
+grid-template-columns: repeat(6,1fr);
+grid-template-rows: auto;
+justify-items: space-between;
+ 
 
+grid-template-areas:
+"text1 text1 img1 img1 img1 img1 img1 img1"
+"icon-box1 icon-box2 icon-box3 icon-box4 text2 text2"
+"img2 img2 img2 img2 img2 img2"
+"img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom"
+"icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5"
+}
+
+}
 
 
 
