--- a/css/index.css
+++ b/css/index.css
@@ -13,133 +13,200 @@
 
 #main{
    
-width: auto;
-display: grid;
-grid-template-columns: repeat(8,1fr);
-grid-template-rows: auto;
-justify-items: space-between;
- 
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+    grid-template-rows: auto;
+    justify-items: space-between;
+    
 
-grid-template-areas:
-"text1 text1 img1 img1 img1 img1 img1 img1"
-"icon-box1 icon-box2 icon-box3 icon-box4 text2 text2 text2 text2"
-"img2 img2 img2 img2 img2 img2 img2 img2"
-"img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom"
-"icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5"
-}
-
-@media screen and (max-width:1300px) and (min-width:960px){
-#main{   
-width: auto;
-display: grid;
-grid-template-columns: repeat(6,1fr);
-grid-template-rows: auto;
-justify-items: space-between;
- 
-
-grid-template-areas:
-"text1 text1 img1 img1 img1 img1 img1 img1"
-"icon-box1 icon-box2 icon-box3 icon-box4 text2 text2"
-"img2 img2 img2 img2 img2 img2"
-"img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom"
-"icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5"
-}
-
+    grid-template-areas:
+    "text1 text1 img1 img1 img1 img1 img1 img1"
+    "icon-box1 icon-box2 icon-box3 icon-box4 text2 text2 text2 text2"
+    "img2 img2 img2 img2 img2 img2 img2 img2"
+    "img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom img-bottom"
+    "icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5 icon-box5"
 }
 
 
 
 
 
-
-
-
-
-.main-pic{
-    width:800px;
+#textbox1{
+    margin-left: 20%;
+    margin-top: 20%;
+    width: 100%;
     height: auto;
+    grid-area:text1;
+    
+    
+}
+
+#img-box1{
+    
+    grid-area:img1;
+    height: auto;
+    margin-top: 70%;
+    margin-right: 30%;
+    
+}
+#img-box2{
+    grid-area:img2;
+    margin-top: 20%;
+    
+    height: auto;
+    
+    
+    
+    
+}
+
+#img-box3{
+    width: 100%;
+    margin-top: 20%;
+    
+    margin-left: auto;
+    margin-right: auto;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    flex-wrap: wrap;
+    
+    gap: 4%;
+    
+    
+    grid-area: img-bottom;
 }
 
 
 
 
+
+#textbox2{
+    display: flex;
+    flex-direction: column;
     
-   
-    #textbox1{
-        margin-left: 20%;
-        margin-top: 20%;
-        width: 100%;
+    margin-top: 30%;
+    margin-right: 50px;
+    width: 600px;
+    height: auto;
+    grid-area:text2;
+    
+    
+    
+    
+}
+
+
+    @media screen and (max-width:1600px){
+
+
+    .main-pic{
+        width:800px;
         height: auto;
-        grid-area:text1;
-        
-       
+    }
+    .main-pic{
+
+     margin-top:11.2%;
+    }
+    li.meny,a{
+
+    font-size: 120%;
     }
 
-    #img-box1{
-       
-      grid-area:img1;
-      height: auto;
-      margin-top: 70%;
-      margin-right: 30%;
-        
-    }
-    #img-box2{
-        grid-area:img2;
-       margin-top: 20%;
-        
-        height: auto;
-        
-       
-        
-        
-    }
 
-    #img-box3{
-        width: 100%;
-        margin-top: 20%;
-        
-        margin-left: auto;
-        margin-right: auto;
-        
-        display: flex;
-        flex-direction: row;
-        justify-content:space-evenly;
-        flex-wrap: wrap;
-        
-        gap: 4%;
-
-
-        grid-area: img-bottom;
-    }
-
-  
+    @media screen and (max-width:1300px) and (min-width:960px){
 
 
 
-    #textbox2{
-        display: flex;
-        flex-direction: column;
-        
-        margin-top: 30%;
-        margin-right: 50px;
-        width: 600px;
-        height: auto;
-        grid-area:text2;
-       
-        
-        
-        
-    }
+        li.meny,a{
 
-   
-   
-   
-   
+            font-size: 110%;
+        }
 
+        .main-pic{
+            width: 600px;
+            height: auto;
+        }
 
+        #img-box1{
     
-    
-    
+            grid-area:img1;
+            height: auto;
+            margin-top: 70%;
+        }
+
+        .icon{
+            display: none;
+        }
+
+        
+            
+        
+        }
+
+        .corgi{
+            width: 400px;
+        }
+
+
+        .pug{
+            margin-top: 30px;
+            width: 300px;
+        }
+
+        #textbox2{
+            width: 400px;
+        }
+
+        #img-box3{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
+
+        .hagaparken,
+        .vanadislunden,
+        .chill-dog{
+            width: 250px;
+            
+        }
+
+    }
+           
+
+    @media screen and (max-width:960px) and (min-width:768px){
+
+        .pug{
+            display: none;
+        }
+
+        #icon-box{
+           display: flex;
+           flex-direction: column;
+            
+        }
+
+        #textbox2{
+         width: 90%;
+        }
+
+        
+
+
+    }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -217,12 +284,3 @@ height: 10%;
 
 
 
-
-
-
-
-
-
-
-
-  
