--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,6 @@
     box-sizing: border-box;
 }
 
-
-
 #header-img{
     margin-top: 50px;
     display: flex;
@@ -86,11 +84,10 @@
 #textbox2{
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     
-    margin-top: 30%;
-    margin-right: 50px;
-    width: 600px;
-    height: auto;
+   
+    
     grid-area:text2;
     
     
@@ -102,79 +99,111 @@
     @media screen and (max-width:1600px){
 
 
-    .main-pic{
-        width:800px;
-        height: auto;
-    }
-    .main-pic{
+        .main-pic{
+            width:800px;
+            height: auto;
+        }
+        .main-pic{
 
-     margin-top:11.2%;
-    }
-    li.meny,a{
-
-    font-size: 120%;
-    }
-
-
-    @media screen and (max-width:1300px) and (min-width:960px){
-
-
-
+        margin-top:11.2%;
+        }
+        
+        
         li.meny,a{
 
-            font-size: 110%;
+        font-size: 120%;
         }
 
-        .main-pic{
-            width: 600px;
-            height: auto;
-        }
-
-        #img-box1{
-    
-            grid-area:img1;
-            height: auto;
-            margin-top: 70%;
-        }
-
-        .icon{
-            display: none;
-        }
-
-        
-            
-        
-        }
-
-        .corgi{
-            width: 400px;
-        }
-
-
-        .pug{
-            margin-top: 30px;
-            width: 300px;
+        .icon-box1{
+            width: 50px;
+            height: 50px;
         }
 
         #textbox2{
+            display: flex;
+            flex-direction: column;
+            border: solid black;
+            margin-top: 20%;
             width: 400px;
         }
 
-        #img-box3{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-        }
+    }
 
+   
+
+   
+
+        @media screen and (max-width:1300px) and (min-width:960px){
+
+
+
+            li.meny,a{
+
+                font-size: 120%;
+            }
+
+            .main-pic{
+                width: 600px;
+                height: auto;
+            }
+
+            #img-box1{
+        
+                
+                height: auto;
+                margin-top: 70%;
+            }
+
+            .icon{
+                display: none;
+            }
+
+            
+                
+            
+            }
+
+            .corgi{
+                width: 400px;
+            }
+
+
+            .pug{
+                margin-top: 30px;
+                width: 300px;
+            }
+
+            #textbox2{
+                width: 350px;
+                margin-right: 10px;
+            }
+
+            #img-box3{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+            }
+
+        
+
+            .hagaparken,
+            .vanadislunden,
+            .chill-dog{
+                width: 300px;
+                
+            }
+
+        }
+    
+    @media screen and (max-width:1100px) and (min-width:960px){
         .hagaparken,
         .vanadislunden,
         .chill-dog{
             width: 250px;
             
-        }
-
     }
+    
            
 
     @media screen and (max-width:960px) and (min-width:768px){
@@ -217,7 +246,7 @@
 #icon-box{
     
     margin-top: 40%;
-    width: 120%;
+    width: 160%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -260,18 +289,16 @@ height: 10%;
 .textbox-img1,
 .textbox-img2,
 .textbox-img3{
-    
-    
-   
-    width: 20%;
+    width: 15%;
     margin-left: auto;
     margin-right: auto;
 
 }
 
-#div{
+#textbox-bottom{
     display: flex;
     flex-direction: row;
+    justify-content:space-between ;
 }
 
 #icon-box5{
@@ -280,7 +307,3 @@ height: 10%;
     grid-area: icon-box5;
     margin-top: 10%;
 }
-
-
-
-
