--- a/css/dagis.css
+++ b/css/dagis.css
@@ -76,7 +76,7 @@ height: auto;
 }
 #Rules-container{
     grid-area: Rules-container;
-    height: auto;
+   
 }
 #disease-container{
     grid-area: disease-container;
@@ -276,13 +276,13 @@ height: auto;
             align-items: center;
         }
          body{
-             overflow-x:hidden;
+            overflow-x:hidden;
          }
         .nav-text{
         position: absolute;
         right:0px;
-        height: 87.5vh;
-        top:11.5vh;
+        height: 86vh;
+        top:12vh;
         background-color: rgb(81, 92, 112);
         width:30%;
         display: flex;
@@ -408,19 +408,19 @@ height: auto;
             #main{
                 width: 100%;
                 justify-items: center;
-                row-gap: 2%;
+             
     
             }
 
             #header-nav{
-                width: 110%;
-                margin-left: 0px;
+                width: 100%;
+                height:80px;
+              
             }
-
             .nav-text{
         
                 height: 86vh;
-                top:12vh;
+                top:10vh;
             }
 
             li.meny,a{
@@ -430,12 +430,13 @@ height: auto;
 
             /*img*/
             #header-img{
-               width: 100%;
+               width: 400px;
+               height: auto;
             }
 
             .meny-pic{
 
-                margin-top:15%;
+                margin-top:20%;
                 width: 400px;
             }
 
@@ -478,11 +479,12 @@ height: auto;
                 margin-right: 10%;
             }
             
+            
             #price-list{
                 flex-direction: column;
                 row-gap: 2%;
                 align-items: center;
-                margin-bottom: 38%;
+               
             }
 
 
@@ -524,8 +526,7 @@ height: auto;
             }
             #price-pic{
                 
-                width: 200px;
-                height: auto;
+               display: none;
             }
 
             #footer-img{
@@ -536,20 +537,25 @@ height: auto;
             p,li{
                 font-size: 1.8vw;
             }
-            .logga{
-                 margin-left:3%;
-                 
-               
-             }
-
-          
+            
+         
+             #header-nav{
+                justify-content: space-around;
+                width: 100%;
+            }
+            p,li{
+                font-size:2vw;
+            }
+        
 
 
     }
 
-    @media screen and (max-width:400px){
+    @media screen and (max-width:450px){
 
-       
+      b{
+          box-sizing: border-box;
+      }
       /*img size*/
       #syringe{
           display:none;
@@ -576,18 +582,68 @@ height: auto;
       }
       #price-pic{
           
-          width: 200px;
-          height: auto;
+         display: none;
       }
 
       #footer-img{
        display: none;
-      }
+       }
 
       .meny-pic{
-
-        margin-top:15%;
-        width: 290px;
+        width: 250px;
     }
+    
+    #line-1, #line-2,#line-3{
+       width: 30px;
+       height: 3px;
+       background-color: #F77D26;
+       margin:4px;
+       
+       }
+    #price-list-box{
+        width:200px;
+        height: auto;
+    }
+
+    .logga{
+      width:40%;
+       
+     }
+     
+     #textbox-routines{
+       width:200px;
+     }
+    
+     #main{
+         width:100%;
+     }
+
+    
+
+    #footer{
+    width: 100%;
+    }
+
+    
+    #header-img{
+     padding-top: 15%;
+     width: 95%;
+
+    }
+
+    .Grids-Container{
+        row-gap:0%;
+    }
+   
+    /*font size*/
+
+    p,li{
+        font-size:3vw;
+    }
+
+    .footer-text{
+        font-size:2vw;
+    }
+
 
     }
