--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -44,7 +44,7 @@ background-image:url(../img/dog-313357_960_720.jpg);
     width: 90%;
     grid-area: header;
     background-color: var(--background-header-nav);
-    height: 100px;
+    height: 23%;
 }
 
     .nav-text{ 
@@ -76,6 +76,7 @@ background-image:url(../img/dog-313357_960_720.jpg);
 #footer{
     
     width: 100%;
+    height: 30%;
     padding-top: 2%;
     padding-bottom: 2%;
     grid-area:footer;
