--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,8 @@
         
+        *{
+            box-sizing: border-box;
+        }
+
 
         #header-img{
             margin-top: 50px;
@@ -15,7 +19,6 @@
             grid-template-rows: auto;
             justify-items: space-between;
             
-
             grid-template-areas:
             "text1 text1 img1 img1 img1 img1 img1 img1"
             "icon-box1 icon-box2 icon-box3 icon-box4 text2 text2 text2 text2"
@@ -25,40 +28,30 @@
         }
 
 
-
-
-
         #textbox1{
             margin-left: 20%;
             margin-top: 20%;
             width: 100%;
             height: auto;
             grid-area:text1;
-            
-            
         }
 
+        
         #img-box1{
-            
             grid-area:img1;
             height: auto;
             margin-top: 70%;
             margin-right: 30%;
-            
         }
 
 
         #img-box2{
             grid-area:img2;
             margin-top: 20%;
-            
             height: auto;
-            
-            
-            
-            
         }
 
+        
         #img-box3{
             width: 100%;
             margin-top: 20%;
@@ -69,34 +62,24 @@
             justify-content:space-evenly;
             flex-wrap: wrap;
             gap: 4%;
-            
-            
             grid-area: img-bottom;
         }
 
-
-
-
-
+        
         #textbox2{
             display: flex;
             flex-direction: column;
             flex-wrap: nowrap;
             grid-area:text2;
-            
-            
-            
-            
         }
 
 
-        
-        
         .icon-box1{
             grid-area: icon-box1;
             width: 10%;
             height: 10%;
         }   
+        
         
         .icon-box2{
             grid-area: icon-box1;
@@ -104,12 +87,15 @@
             height: 10%;
             
         }  
+        
+        
         .icon-box3{
             grid-area: icon-box3;
             width: 10%;
             height: 10%;
             
         }    
+        
         
         .icon-box4{
             grid-area: icon-box4;
@@ -128,11 +114,13 @@
             
         }
         
+        
         #textbox-bottom{
             display: flex;
             flex-direction: row;
             justify-content:space-between ;
         }
+        
         
         #icon-box5{
             display: flex;
@@ -140,6 +128,7 @@
             grid-area: icon-box5;
             margin-top: 10%;
         }
+        
         
         #icon-box{
     
@@ -149,124 +138,164 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: space-around;
+            
         }
         
         
         
-        @media screen and (max-width:1600px){
+    @media screen and (max-width:1600px){
 
 
-            .main-pic{
-                width:800px;
-                height: auto;
-            }
-            .main-pic{
-
-            margin-top:11.2%;
-            }
-            
-            
-            li.meny,a{
-
+        .main-pic{
+            width:800px;
+            height: auto;
+        }
+        
+        
+        .main-pic{
+                margin-top:11.2%;
+        }
+        
+        
+        li.meny,a{
             font-size: 120%;
-            }
-
-            .icon-box1{
-                width: 50px;
-                height: 50px;
-            }
-
-            #textbox2{
-                display: flex;
-                flex-direction: column;
-                
-                margin-top: 20%;
-                width: 400px;
-            }
-
         }
+
+        
+        .icon-box1{
+            width: 50px;
+            height: 50px;
+        }
+
+            
+        #textbox2{
+            display: flex;
+            flex-direction: column;
+            
+            margin-top: 20%;
+            width: 400px;
+        }
+
+        
+        .footer-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        
+        .nav-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        
+        #header-nav{
+            width: 89.6%;
+        }
+
+    }
 
    
 
    
 
-        @media screen and (max-width:1300px) and (min-width:960px){
+    @media screen and (max-width:1300px) and (min-width:960px){
 
 
 
-            li.meny,a{
+        li.meny,a{
 
-                font-size: 105%;
-            }
-
-            .main-pic{
-                width: 600px;
-                height: auto;
-            }
-
-            #img-box1{
-        
-                
-                height: auto;
-                margin-top: 70%;
-            }
-
-            .icon{
-                display: none;
-            }
-
-            
-                
-            
-
-            .corgi{
-                width: 400px;
-            }
-
-
-            .pug{
-                margin-top: 30px;
-                width: 300px;
-            }
-
-            #textbox2{
-                width: 350px;
-                margin-right: 10px;
-            }
-
-            #img-box3{
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: space-evenly;
-            }
-
-        
-
-            .hagaparken,
-            .vanadislunden,
-            .chill-dog{
-                width: 300px;
-                
-            }
-
+            font-size: 105%;
         }
+
+        
+        .main-pic{
+            width: 600px;
+            height: auto;
+        }
+
+        
+        #img-box1{
+    
+            
+            height: auto;
+            margin-top: 70%;
+        }
+
+            
+        .icon{
+            display: none;
+        }
+
+        
+        .corgi{
+            width: 400px;
+        }
+
+
+        .pug{
+            margin-top: 30px;
+            width: 300px;
+        }
+
+            
+        #textbox2{
+            width: 350px;
+            margin-right: 10px;
+        }
+
+        
+        #img-box3{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
+
+    
+        .hagaparken,
+        .vanadislunden,
+        .chill-dog{
+            width: 300px;
+            
+        }
+
+        
+        .footer-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        
+        .nav-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        
+        #header-nav{
+            width: 89.5%;
+        }
+
+    }
     
         
         
-        @media screen and (max-width:1100px) and (min-width:960px){
-            .hagaparken,
-            .vanadislunden,
-            .chill-dog{
-                width: 250px;
-                
-            }
+    @media screen and (max-width:1100px) and (min-width:960px){
+            
+        .hagaparken,
+        .vanadislunden,
+        .chill-dog{
+            width: 250px;
+            
         }
+    }
     
            
 
     @media screen and (max-width:960px) and (min-width:768px){
 
+        
         #main{
             width: 100%;
         }
@@ -277,87 +306,250 @@
             height: auto;
         }
             
+        
         li.meny,a{
-
             font-size: 90%;
         }
-            .icon1,
-            .icon{
-                display: none;
-            }
-
-
-            .hagaparken,
-            .vanadislunden,
-            .chill-dog{
-              width: 200px;
-              margin-top: 100px;
-            }          
-
-            .corgi{
-                width: 400px;
-                margin-top: 30px;
-                
-                
-            }
-
-            .pug{
-
-               width: 270px;
-               
-               margin-top: 300px;
-            }
-
-            #icon-box{
-                height: 720px;
-                display: flex;
-                flex-direction: column;
-                justify-content:space-around ;
-                margin-left: 70px;
-                gap: 90px;
-                width: 150px;
-                margin-top: 70px;
-                
-                    
-            }
-
-            #textbox1{
-                
-                margin-top: 30px;
-                margin-right: 50px;
-                
-                
-            }
-
-            
-
-            #textbox2{
-                width: 400px;
-                height: 300px;
-                margin-right: 100px;
-                margin-bottom: 50px;
-                
-                
-                
-            }
-
-            #img-box2{
-                margin-top: 400px;
-                margin-left: 100px;
-            }
-
-            p{
-               font-size:1.3vw;
-            }
-
-            #textbox-bottom{
-                display: flex;
-                flex-direction: row;
-                flex-wrap: nowrap;
-                justify-content: space-evenly;
-
-            }
             
             
-    }        
+        .icon1,
+        .icon{
+            display: none;
+        }
+
+
+        .hagaparken,
+        .vanadislunden,
+        .chill-dog{
+            width: 200px;
+            margin-top: 100px;
+        }          
+
         
+        .corgi{
+            width: 400px;
+            margin-top: 30px;
+                
+                
+        }
+
+        
+        .pug{
+            width: 270px;
+            margin-top: 300px;
+        }
+
+        
+        #icon-box{
+            height: 720px;
+            display: flex;
+            flex-direction: column;
+            justify-content:space-around ;
+            margin-left: 70px;
+            gap: 90px;
+            width: 150px;
+            margin-top: 70px;
+        }
+
+        
+        #textbox1{
+            margin-top: 30px;
+            margin-right: 50px;
+        }
+
+            
+        #textbox2{
+            width: 400px;
+            height: 300px;
+            margin-right: 100px;
+            margin-bottom: 50px;
+        }
+
+        
+        #img-box2{
+            margin-top: 400px;
+            margin-left: 100px;
+        }
+
+        
+        p{
+            font-size:1.3vw;
+        }
+
+        
+        #textbox-bottom{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-evenly;
+        }
+
+            
+        .h3-textbottom{
+            font-size: 1.5vw;
+        }
+
+        
+        .footer-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        
+        .nav-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        
+        #header-nav{
+            width: 89.33%;
+        }
+            
+            
+    }
+    
+    
+    @media screen and (max-width:767px){
+        
+        #main{
+            grid-template-columns: repeat(1,1fr);
+            grid-template-rows:1fr;
+            grid-template-areas:
+            "text1"
+            "img1"
+            "text2"
+            "img2"
+        }
+
+        #img-box3{
+            display: none;
+        }
+
+        #icon-box5{
+            display: none;
+        }
+
+        .main-pic{
+            width: 80%;
+        }
+
+        li.meny,a{
+
+            font-size: 80%;
+        }
+
+        .corgi{
+            width: 60%;
+        }
+
+        .pug{
+            width: 50%;
+        }
+
+        #img-box1{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: center;
+            margin-left:auto;
+            margin-right: auto;
+            margin-top: 20%;
+        }
+
+        #img-box2{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
+
+        #icon-box{
+            width: 100%;
+            margin-top: 0%;
+            margin-bottom: 50px;
+        }
+
+        #textbox1{
+            width: 60%;
+            margin-top: 50px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        #textbox2{
+            width: 60%;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        .icon-box1,
+        .icon-box2,
+        .icon-box3,
+        .icon-box4{
+            display: none;
+        }
+
+        
+        p{
+            font-size: 1.5vw;
+        }
+
+        .logga{
+            width: 40%;
+            height: 50%;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        #footer-img{
+            width: 70px;
+            height: 60px;
+        }
+
+        .nav-text{
+            margin-top:auto;
+            margin-bottom: auto;
+            margin-left: 2%;
+            font-size: 90%;
+        }
+
+        .footer-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+        
+        
+        #header-nav{
+            width: 89.15%;
+        }
+
+
+    }
+
+
+    @media screen and (max-width:556px){
+        
+        
+        .logga{
+            display: none;
+        }
+
+        .nav-text{
+            width: 100%;
+            margin: auto;
+        }
+
+        .footer-text{
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+
+        #header-nav{
+            width: 88.603%;
+        }
+    }
+      
+
+
+   
