--- a/css/dagis.css
+++ b/css/dagis.css
@@ -84,6 +84,7 @@
     flex-direction: row;
    
 }
+
 #disease-container{
     grid-area: disease-container;
     height: auto;
@@ -105,36 +106,37 @@
 
 /*list for routines*/ 
    #open{
-    list-style-image: url(../img/open-1.png);
+
+        list-style-image: url(../img/open-1.png);
     }
     #Walk1{
-    list-style-image: url(../img/Koppel-ikon.png);
+
+        list-style-image: url(../img/Koppel-ikon.png);
     }
     #food{
-    list-style-image: url(../img/food-ikon.png);
+
+        list-style-image: url(../img/food-ikon.png);
     }
     #rest{
-    list-style-image: url(../img/rest.png);
+
+        list-style-image: url(../img/rest.png);
     }
     #walk2{
-    list-style-image: url(../img/Koppel-ikon.png);
+
+        list-style-image: url(../img/Koppel-ikon.png);
     }
     #home{
-    list-style-image: url(../img/home-1.png);
+
+        list-style-image: url(../img/home-1.png);
     }
     #close{
-    list-style-image: url(../img/close-1.png);
+
+        list-style-image: url(../img/close-1.png);
     }
 
    
-
-    
-
-    
-
-    
-   
     #price-list-box{
+
         border: dotted 2px rgba(38, 51, 67, 0.8);
         width: 700px;
         height: 200px;
@@ -142,26 +144,32 @@
     }
 
     #rubrik-price{
+
         text-align: center;
     }
+
+
     #Rules-textbox, #disease-textbox{
         margin-left: 15%;
         width: 50%;
     }
 
-     #price-pic{
+    /*img*/
+
+    #price-pic{
         padding:5%;
         height: auto;
-       
+        width: 250px;
     }
+
     #pugs{
         padding:5%;
         height: auto;
     }
+
     #syringe{
         padding:5%;
         height: 250px;
-      
     }
 
     #sick-dog{
@@ -170,12 +178,8 @@
         width: 350px;
         height: auto;
     }
-
-    #price-pic{
-        width: 250px;
-       
-    }
-
+   
+    /*img for pricelist*/
     #dollar{
         list-style-image: url(../img/black-paw-20px.png);
     }
@@ -187,48 +191,55 @@
 
     @media screen and (max-width:1400px) {
         .meny-pic{
+
             width:800px;
             height: auto;
-        }
-        .meny-pic{
-
             margin-top:11.2%;
         }
+        
         li.meny,a{
+
             font-size: 120%;
         }
         #pomeranian-img{
+
             width: 300px;
             height: auto;
         }
 
         #price-list-box{
+
             width: 500px;
             height: 200px;
          
         }
        
     }
-/*For small desktop*/
+/* Media Queries for small desktop*/
     @media screen and (max-width:1300px) and (min-width:960px)
     {
         li.meny,a{
             font-size: 110%;
         }
+
         #sick-dog{
             width: 300px;
             height: auto;
         }
 
         #pomeranian-img{
+
             width: 300px;
             height: auto;
         }
         #bulldog-pic{
+
             width: 300px;
             height: 250px;
         }
+
         #pugs{
+
             width: 180px;
             height: 165px;
         }
@@ -238,19 +249,23 @@
             width: 300px;
             height: auto;
         }
+
         #price-pic{
             
             width: 200px;
             height: auto;
         }
     }
-/*size for meny*/
+
+
+/*Changing meny to hamburger*/
     @media screen and (max-width:1050px){
+
         #line-1, #line-2,#line-3{
-         width: 45px;
-        height: 5px;
-        background-color: #F77D26;
-        margin:7px;
+          width: 45px;
+          height: 5px;
+          background-color: #F77D26;
+          margin:7px;
         
         }
 
@@ -266,6 +281,7 @@
 
         /*hamburgermeny*/
         #burger{
+
           position: absolute;
           cursor: pointer;
           right: 5%;
@@ -275,10 +291,14 @@
             align-items: center;
           
         }
+
          body{
+
             overflow-x:hidden;
          }
+
         .nav-text{
+
         position: absolute;
         right:0px;
         height: 88vh;
@@ -295,10 +315,14 @@
         transition: transform 0.5s ease-in;
 
         }
+
         .nav-active{
+
             transform: translateX(0%);
         }
+
         li.meny,a{
+
             margin:0%;
            
         }
@@ -315,21 +339,28 @@
             width: 80px;
             height: auto;
          }
+
     }
+
+
 /*For tablet*/
     
     @media screen and (max-width:960px) and (min-width:768px){
 
         #disease-container{
+
             flex-direction:row-reverse;
             justify-content: center;
    
         }
 
         #disease-textbox{
+
             width: 40%;
         }
+
         #Rules-container{
+
             justify-content: center;
         }
 
@@ -339,7 +370,9 @@
             height: 88vh;
             top:12vh;
         }
+
         li.meny,a{
+
             font-size: 100%;
         }
 
@@ -353,7 +386,6 @@
         }
 
 
-
         /*img size*/
 
         .meny-pic{
@@ -363,22 +395,28 @@
         }
 
         #syringe{
+
             display:none;
 
         }
+
         #pomeranian-img{
+
             width: 300px;
             height: auto;
         }
        
        
         #bulldog-pic{
+
             width: 300px;
             height: 250px;
         }
+
         #container-list{
+
             width:40%;
-           
+
         }
        
         #sick-dog{
@@ -386,7 +424,9 @@
             width: 200px;
             height: auto;
             margin-left: 5%;
+
         }
+
         #price-pic{
             
             width: 200px;
@@ -400,24 +440,30 @@
     @media screen and (max-width:767px)
     {
         body{
+
             background-image:none;
             }
+
             .Grids-Container{
+
                 width:100%;
             }
 
             #main{
+
                 width: 100%;
                 justify-items: center;
              
-    
             }
 
             #header-nav{
+
+                justify-content: space-around;
                 width: 100%;
                 height:80px;
-              
             }
+
+
             .nav-text{
         
                 height: 86vh;
@@ -425,12 +471,14 @@
             }
 
             li.meny,a{
+
                 font-size: 100%;
             }
 
 
             /*img*/
             #header-img{
+
                width: 400px;
                height: auto;
             }
@@ -442,6 +490,7 @@
             }
 
             #burger{
+
                 right: 10%;
             }
 
@@ -450,8 +499,9 @@
             }
 
 
-            /*change direktion in flex-box*/
+            /*change direktion in grid and flex-box*/
             #routines-container{
+
                 width: 100%;
                 justify-items: center;
                 grid-template-columns: repeat(6,1fr);
@@ -460,28 +510,35 @@
                 "textbox-routines textbox-routines textbox-routines textbox-routines textbox-routines textbox-routines"
                  "pomeranian-img pomeranian-img  pomeranian-img pomeranian-img pomeranian-img pomeranian-img";
             }
+
             #list-routines-container{
+
                 flex-direction:column;
                 align-items: center;
-               
-            }
-            #Rules-container{
-               flex-direction: column;
-               align-items: center;
-            }
-            #disease-container{
-                flex-direction:column;
-                align-items: center;
-                
                
             }
 
+            #Rules-container{
+
+               flex-direction: column;
+               align-items: center;
+            }
+
+            #disease-container{
+
+                flex-direction:column;
+                align-items: center;
+                
+            }
+
             #disease-textbox{
+
                 margin-right: 10%;
             }
             
             
             #price-list{
+
                 flex-direction: column;
                 row-gap: 2%;
                 align-items: center;
@@ -490,12 +547,13 @@
 
 
             #textbox-routines{
+
                width: 70%;
              
-                
               }
 
               #container-list{
+
                   width: 100%;
                   padding-left: 10%;
                   
@@ -503,51 +561,52 @@
 
             /*img size*/
             #syringe{
+
                 display:none;
     
             }
+
             #pomeranian-img{
+
                 width: 300px;
                 height: auto;
             }
+
             #pugs{
+
                 display: none;
             }
            
             #bulldog-pic{
+
                 width: 300px;
                 height: 250px;
             }
            
            
             #sick-dog{
+
                 margin-top: 5%;
                 width: 200px;
                 height: auto;
             }
+
             #price-pic{
                 
                display: none;
             }
 
             #footer-img{
+
                width: 80px;
                height: auto;
             }
 
             p,li{
-                font-size: 1.8vw;
+
+               font-size:2vw;
             }
             
-         
-             #header-nav{
-                justify-content: space-around;
-                width: 100%;
-            }
-            p,li{
-                font-size:2vw;
-            }
-        
 
 
     }
@@ -555,87 +614,100 @@
     @media screen and (max-width:450px){
 
       b{
+
           box-sizing: border-box;
       }
+
       /*img size*/
+
       #syringe{
+
           display:none;
 
       }
+
       #pomeranian-img{
+
           width: 200px;
           height: auto;
       }
+
       #pugs{
+
           display: none;
       }
      
       #bulldog-pic{
+
           width: 200px;
           height:auto;
       }
      
      
       #sick-dog{
+
           margin-top: 5%;
           width: 200px;
           height: auto;
+
       }
+
       #price-pic{
           
          display: none;
       }
 
       #footer-img{
+
        display: none;
        }
 
       .meny-pic{
+
         width: 250px;
     }
     
+    /*burger*/
     #line-1, #line-2,#line-3{
+
        width: 30px;
        height: 3px;
        background-color: #F77D26;
        margin:4px;
        
        }
+
     #price-list-box{
+
         width:200px;
         height: auto;
     }
 
-    .logga{
-      width:40%;
-       
-     }
      
      #textbox-routines{
+
        width:200px;
      }
     
      #main{
+
          width:100%;
      }
 
     
-
-    #footer{
-    width: 100%;
-    }
-
-    
     #header-img{
+
      padding-top: 15%;
      width: 95%;
 
     }
 
     .Grids-Container{
+
         row-gap:0%;
     }
    
+    
     /*font size*/
 
     p,li{
