--- a/css/om_mig.css
+++ b/css/om_mig.css
@@ -211,9 +211,13 @@
     #header-nav{
         width: 90%;
         margin-left: 0px;
+        font-size: 50%;
     
     }
-
+      .looga{
+          width: 50%;
+        
+      }
       
       .bilder{
         display: grid;
@@ -223,4 +227,20 @@
         display:grid;
         width: 80%;
     }
+    #header-nav{
+        width: 90%;
+        margin-left: 0px;
+      
+        
+    }
+
+      #footer{
+          margin-top: 50%;
+          font-size: 200%;
+      }
+    .meny-pic{
+        width:100%;
+        height: auto;
+        margin-top:25%;
+    } 
 }
