--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -281,7 +281,7 @@ fieldset {
     #header-nav{
         width: 90%;
         margin-left: 0px;
-        /*height: 50px;*/
+        height: 10%
     }
 
     .kontaktsBild{
@@ -297,6 +297,7 @@ fieldset {
     
     .nav-text {
         display: flex;
+        width: 100%;
         
     }
 }
